<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_screen_background"
        tools:context=".ui.onboarding.PatientInfo">


        <RelativeLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/montserrat"
                android:text="@string/PatientOnboarding"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large" />


        </RelativeLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingStart="35dp" />

                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:ems="10"
                    android:maxLength="2"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:paddingStart="35dp" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:ems="10"
                    android:maxLength="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:paddingStart="35dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/spinner_background"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/sp_bloodGroup"
                        android:layout_width="320dp"
                        android:layout_height="48dp"
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/montserrat"
                        android:spinnerMode="dropdown" />


                </LinearLayout>

<!--                -->



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/spinner_background"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/sp_gender"
                        android:layout_width="320dp"
                        android:layout_height="48dp"
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/montserrat"
                        android:spinnerMode="dropdown" />

                </LinearLayout>


                <EditText
                    android:id="@+id/et_medicalHistory"
                    android:layout_width="320dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="start"
                    android:paddingTop="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/pastMedicalHistory"
                    android:inputType="text"
                    android:paddingStart="10dp" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="160dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/montserratbold"
                    android:text="@string/save" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


        <ProgressBar
            android:id="@+id/progressBar7"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>